--- a/force-app/main/default/classes/DownloadPDFController.cls
+++ b/force-app/main/default/classes/DownloadPDFController.cls
@@ -2,14 +2,12 @@ global class DownloadPDFController {
     global List<ServiceAppointment> selectedAppointments { get; set; }
     global List<SelectOption> templateOptions { get; set; }
     global List<String> paramId { get; set; }
-    global String paramStart { get; set; }
-    global String paramEnd { get; set; }
 
     global DownloadPDFController() {
-        // Initialize your controller by capturing parameters from the URL
+        // Initialize Controller by capturing parameters from the URL
         Map<String, String> params = ApexPages.currentPage().getParameters();
 
-        // Retrieve the "services"/"id" parameter as a comma-separated string
+        // Retrieve the "services" parameter as a comma-separated string
         String servicesParam;
         if(params.get('services') != null){
             servicesParam = params.get('services');
@@ -24,19 +22,11 @@ global class DownloadPDFController {
             paramId = new List<String>();
         }
 
-        paramStart = params.get('start');
-        paramEnd = params.get('end');
-
         selectedAppointments = new List<ServiceAppointment>();
         templateOptions = new List<SelectOption>();
 
         fetchServiceAppointments();
         loadTemplateOptions();
-
-        System.debug('paramId' + paramId);
-        System.debug('selectedAppointments' + selectedAppointments);
-        System.debug('templateOptions' + templateOptions);
-
     }
 
     global void fetchServiceAppointments() {
@@ -65,9 +55,6 @@ global class DownloadPDFController {
         return EncodingUtil.base64Encode(pdfPage);
     }
 
-    // Get the PDF, however getContentAsPDF is not supported during tests,
-    // so check if a test is running and return a dummy value
-    @RemoteAction
     global static Blob getPDF(Id templateId, Id recordId) {
         PageReference pdfPage = Page.pdfwrapper;
         pdfPage.getParameters().put('templateId', templateId);
